--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html {
     max-width: 1000px;
     margin: auto;
     position: relative;
+    font-family: 'Roboto', sans-serif;
 
 }
 
@@ -22,25 +23,28 @@ html {
 }
 
 .mainPhoto {
-    border-radius:50%;
+    border-radius: 50%;
     margin: 5px auto 0px;
 }
 
 .buttons {
-    margin:0 auto;
+    margin: 0 auto;
 }
 
 .h1 {
-    color:blue;
+    color: blue;
     text-align: center;
+    padding-top: 20px;
 }
+
 .h2 {
-    color:rgb(90, 5, 248);
+    color: rgb(90, 5, 248);
     text-align: center;
 }
+
 .main {
-    background-color:#b8b6b6 ;
-    color:rgb(12, 12, 12);
+    background-color: #b8b6b6;
+    color: rgb(12, 12, 12);
     padding-bottom: 10px;
     padding: -5px;
 }
@@ -51,12 +55,17 @@ html {
 }
 
 .text {
+    margin: 10px;
+    padding: 10px;
+    line-height: 1.5;
 
 }
 
 .list {
-
+    list-style-type: disc;
 }
+
 .listItem {
-    
+    padding: 0;
+    font-weight: 700;
 }
